<resources>
    <string name="app_name">人情笔记</string>

    <string name="string_tab_item_home">首页</string>
    <string name="string_tab_item_send">$- 随礼</string>
    <string name="string_tab_item_recieve">$+ 收礼</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="statistics">statistics</string>

    <string name="text_datapicker">请选择日期 ：</string>
    <string name="edit_receive_name_hint">请输入收礼对象名</string>
    <string name="edit_receive_reason_hint">点击选择收礼缘由</string>
    <string name="edit_send_name_hint">请输入随礼对象名</string>
    <string name="edit_send_reason_hint">请输入随礼缘由</string>
</resources>