<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mytoolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorAccent"
        app:title=" ">
        <ImageView
            android:id="@+id/image_toolbar_add"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="left"
            app:srcCompat="@drawable/draw_mytoolbar_add"
            android:clickable="true"
            android:focusable="true"/>
        <TextView
            android:id="@+id/mytoolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="主页"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>



    <FrameLayout
        android:id="@+id/fl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_menu_linear"
        android:layout_below="@+id/mytoolbar"
        android:clipChildren="false"
        android:layout_marginBottom="0dp">
    </FrameLayout>

    <ImageView
        android:id="@+id/image_add_icon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_above="@+id/main_menu_linear"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/draw_main_add"
        android:layout_marginEnd="20dp"/>

    <ImageView
        android:id="@+id/image_send_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/main_menu_linear"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_toStartOf="@+id/image_add_icon"
        android:layout_toLeftOf="@+id/image_add_icon"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/draw_main_send"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/image_receive_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/image_add_icon"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/draw_main_receive"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/main_menu_linear"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorLightGray"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/menu_text_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="3"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/string_tab_item_send"
            android:textColor="@color/colorDarkGray"
            android:textSize="22sp" />

        <RelativeLayout
            android:id="@+id/menu_rl_home"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:clickable="true"
            android:background="@drawable/layout_relative_cir">
            <ImageView
                android:id="@+id/menu_image_home"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_gravity="bottom"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                app:srcCompat="@drawable/draw_menu_home" />
        </RelativeLayout>

        <TextView
            android:id="@+id/menu_text_receive"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="3"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/string_tab_item_recieve"
            android:textColor="@color/colorDarkGray"
            android:textSize="22sp" />
    </LinearLayout>
</RelativeLayout>